# qram

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  codecov.yml  justfile  pyproject.toml  qram.yml
.github/workflows/: ci.yml
scripts/: get_whcli_token.py  ngrok-public-url.py  reconfigure-webhook.py  wait_for_whcli.py
src/qram/: __init__.py  __main__.py  config.py  errors.py  flow.py  formatter.py  git.py  github.py  globals.py  types.py
src/qram/web/: __init__.py  __main__.py  app.py  events.py  server.py
src/qram/web/github/: __init__.py  api.py  handler.py
src/qram/web/provider/: __init__.py  github.py
src/qram/web/webhook/: base.py  github.py
test/: README.md  __init__.py  conftest.py
test/assets/: test-repo.tgz
test/component/: test_config.py  test_git.py
test/integration/: __init__.py  mocks.py  test_flow.py
test/integration/scenarios/: bad-flow.gherkin  forbidden-flow.gherkin  successful-flow.gherkin
test/system/: __init__.py  conftest.py  test_github.py
test/unit/: test_git.py
tests/: README.md  conftest.py
tests/behavior/: test_stub_b.py
tests/e2e/: __init__.py  helpers.py  test_stub_e.py
tests/e2e/github_provider/: __init__.py  conftest.py  test_app_github.py  test_github_api.py
tests/integration/: test_stub_i.py
tests/integration/web/: test_app_github.py
tests/unit/: test_config.py  test_handler_github.py  test_stub_u.py  test_web.py
