[project]
name = 'qram'
version = '0.0'
dependencies = []

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
qram = 'qram.__main__:_main'

[dependency-groups]
dev = [
    'pre-commit',
    'mypy',
    'pytest',
    'pytest-cov',
    'ruff',
]


[tool.mypy]
strict = true


[tool.pytest.ini_options]
# shorten pytest output and hide sourcecode excerpts
addopts = '--tb=native'


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    'I', # isort
    'F', # PyFlakes
]

[tool.ruff.format]
quote-style = 'single'
